crates/overdrive-control-plane/tests/compile_fail/lifecycle_event_does_not_carry_alloc_status_row.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/lifecycle_event_does_not_carry_alloc_status_row.rs:47:15
   |
47 |         from: row, // <-- expected type `AllocStateWire`, found `AllocStatusRow`
   |               ^^^ expected `AllocStateWire`, found `AllocStatusRow`
